fix tablehighliter
On Jenkins 2.335+ the table highlighter didn't work anymore due to
changed layouting for inputs.
Also when using a dark theme, the text was unreadable when hihglighted.

--- a/src/main/webapp/css/role-strategy.css
+++ b/src/main/webapp/css/role-strategy.css
@@ -73,6 +73,7 @@ label.attach-previous {
 
 .highlighted {
   background-color: #FFF9C9;
+  color: var(--black);
 }
 
 .global-matrix-authorization-strategy-table TD.blank {
